Updated the rep

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src",
   "private": true,
   "scripts": {
-    "connect-xchange": "ssh caffeinum@testnet.exchange -L 8080:192.168.18.45:8080 -N -f 2>/dev/null",
+    "connect-xchange": "ssh dev1644@localhost -L 8080:192.168.18.45:8080 -N -f",
     "predev": "npm run connect-xchange",
     "pretest": "npm run connect-xchange",
     "prestart": "npm run connect-xchange",
