--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "rand-token": "^0.4.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
+    "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "superagent": "^3.8.3",
     "web3": "^1.0.0-beta.35",
